Fix for too wide avatars on single posts

--- a/wp-content/themes/thatcampdev/style.css
+++ b/wp-content/themes/thatcampdev/style.css
@@ -1510,6 +1510,9 @@ dd.wp-caption p.wp-caption-text,
 .post-right {
   margin: 0 0 0 100px;
 }
+.post-meta-author {
+  float: left;
+}
 /*--------------------------------------------------------------
 4.4 - Widgets
 --------------------------------------------------------------*/
